docs/api/qiskit/0.28/qiskit.opflow.gradients.QFI.mdx
---
title: QFI
description: API reference for qiskit.opflow.gradients.QFI
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.gradients.QFI
---

# qiskit.opflow\.gradients.QFI

<Class id="qiskit.opflow.gradients.QFI" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/opflow/gradients/qfi.py" signature="QFI(qfi_method='lin_comb_full')" modifiers="class">
  Compute the Quantum Fisher Information (QFI).

  Computes the QFI given a pure, parameterized quantum state, where QFI is:

$$
\mathrm{QFI}_{kl}= 4 \mathrm{Re}[\langle \partial_k \psi | \partial_l \psi \rangle
− \langle\partial_k \psi | \psi \rangle \langle\psi | \partial_l \psi \rangle].
$$

  **Parameters**

  **qfi\_method** (`Union`\[`str`, `CircuitQFI`]) – The method used to compute the state/probability gradient. Can be either a [`CircuitQFI`](qiskit.opflow.gradients.CircuitQFI "qiskit.opflow.gradients.CircuitQFI") instance or one of the following pre-defined strings `'lin_comb_full'`, `` 'overlap_diag'` `` or `` 'overlap_block_diag'` ``.

  **Raises**

  **ValueError** – if `qfi_method` is neither a `CircuitQFI` object nor one of the predefined strings.

  ### \_\_init\_\_

  <Function id="qiskit.opflow.gradients.QFI.__init__" signature="__init__(qfi_method='lin_comb_full')">
    **Parameters**

    **qfi\_method** (`Union`\[`str`, `CircuitQFI`]) – The method used to compute the state/probability gradient. Can be either a [`CircuitQFI`](qiskit.opflow.gradients.CircuitQFI "qiskit.opflow.gradients.CircuitQFI") instance or one of the following pre-defined strings `'lin_comb_full'`, `` 'overlap_diag'` `` or `` 'overlap_block_diag'` ``.

    **Raises**

    **ValueError** – if `qfi_method` is neither a `CircuitQFI` object nor one of the predefined strings.
  </Function>

  ## Methods

  |                                                                                                                                                                   |                                                                                                            |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.opflow.gradients.QFI.__init__ "qiskit.opflow.gradients.QFI.__init__")(\[qfi\_method])                                                        | **type qfi\_method**`Union`\[`str`, `CircuitQFI`]                                                          |
  | [`convert`](#qiskit.opflow.gradients.QFI.convert "qiskit.opflow.gradients.QFI.convert")(operator\[, params])                                                      | **type operator**`CircuitStateFn`                                                                          |
  | [`gradient_wrapper`](#qiskit.opflow.gradients.QFI.gradient_wrapper "qiskit.opflow.gradients.QFI.gradient_wrapper")(operator, bind\_params\[, …])                  | Get a callable function which provides the respective gradient, Hessian or QFI for given parameter values. |
  | [`parameter_expression_grad`](#qiskit.opflow.gradients.QFI.parameter_expression_grad "qiskit.opflow.gradients.QFI.parameter_expression_grad")(param\_expr, param) | Get the derivative of a parameter expression w\.r.t.                                                       |

  ## Attributes

  |                                                                                                  |                       |
  | ------------------------------------------------------------------------------------------------ | --------------------- |
  | [`qfi_method`](#qiskit.opflow.gradients.QFI.qfi_method "qiskit.opflow.gradients.QFI.qfi_method") | Returns `CircuitQFI`. |

  ## Members list

  ### convert

  <Function id="qiskit.opflow.gradients.QFI.convert" signature="convert(operator, params=None)">
    **Parameters**

    *   **operator** (`CircuitStateFn`) – The operator corresponding to the quantum state |ψ(ω)〉for which we compute the QFI
    *   **params** (`Union`\[`ParameterVector`, `ParameterExpression`, `List`\[`ParameterExpression`], `None`]) – The parameters we are computing the QFI wrt: ω If not explicitly passed, they are inferred from the operator and sorted by name.

    **Return type**

    `ListOp`

    **Returns**

    ListOp\[ListOp] where the operator at position k,l corresponds to QFI\_kl

    **Raises**

    **ValueError** – If operator is not parameterized.
  </Function>

  ### gradient\_wrapper

  <Function id="qiskit.opflow.gradients.QFI.gradient_wrapper" signature="gradient_wrapper(operator, bind_params, grad_params=None, backend=None, expectation=None)">
    Get a callable function which provides the respective gradient, Hessian or QFI for given parameter values. This callable can be used as gradient function for optimizers.

    **Parameters**

    *   **operator** (`OperatorBase`) – The operator for which we want to get the gradient, Hessian or QFI.
    *   **bind\_params** (`Union`\[`ParameterExpression`, `ParameterVector`, `List`\[`ParameterExpression`]]) – The operator parameters to which the parameter values are assigned.
    *   **grad\_params** (`Union`\[`ParameterExpression`, `ParameterVector`, `List`\[`ParameterExpression`], `Tuple`\[`ParameterExpression`, `ParameterExpression`], `List`\[`Tuple`\[`ParameterExpression`, `ParameterExpression`]], `None`]) – The parameters with respect to which we are taking the gradient, Hessian or QFI. If grad\_params = None, then grad\_params = bind\_params
    *   **backend** (`Union`\[`Backend`, `BaseBackend`, `QuantumInstance`, `None`]) – The quantum backend or QuantumInstance to use to evaluate the gradient, Hessian or QFI.
    *   **expectation** (`Optional`\[`ExpectationBase`]) – The expectation converter to be used. If none is set then PauliExpectation() is used.

    **Return type**

    `Callable`\[\[`Iterable`], `ndarray`]

    **Returns**

    Function to compute a gradient, Hessian or QFI. The function takes an iterable as argument which holds the parameter values.
  </Function>

  ### parameter\_expression\_grad

  <Function id="qiskit.opflow.gradients.QFI.parameter_expression_grad" signature="parameter_expression_grad(param_expr, param)" modifiers="static">
    Get the derivative of a parameter expression w\.r.t. the given parameter.

    **Parameters**

    *   **param\_expr** (`ParameterExpression`) – The Parameter Expression for which we compute the derivative
    *   **param** (`ParameterExpression`) – Parameter w\.r.t. which we want to take the derivative

    **Return type**

    `Union`\[`ParameterExpression`, `float`]

    **Returns**

    ParameterExpression representing the gradient of param\_expr w\.r.t. param
  </Function>

  ### qfi\_method

  <Attribute id="qiskit.opflow.gradients.QFI.qfi_method">
    Returns `CircuitQFI`.

    **Return type**

    `CircuitQFI`

    **Returns**

    `CircuitQFI`.
  </Attribute>
</Class>

